# entity-component-experiment

./: CMakeLists.txt  README.md  app.hpp  main.cpp
engine/: .#camera_component.cpp  CMakeLists.txt  base_component.cpp  base_component.hpp  base_system.hpp  camera_component.cpp  camera_component.hpp  camera_system.cpp  camera_system.hpp  entity.hpp  material.hpp  mesh_component.cpp  mesh_component.hpp  mesh_renderer_component.cpp  mesh_renderer_component.hpp  mesh_renderer_system.cpp  mesh_renderer_system.hpp  mesh_system.cpp  mesh_system.hpp  message_handler.cpp  message_handler.hpp  message_system.cpp  message_system.hpp  messages.hpp  particle_system_component.hpp  particle_system_system.hpp  scene.cpp  scene.hpp  system.hpp  transform_component.hpp  transform_system.cpp  transform_system.hpp
gl/: texture.hpp
logger/: logger.cpp  logger.hpp
shaders/: fs_draw_particles.glsl  fs_particles.glsl  fs_simple.glsl  vs_draw_particles.glsl  vs_particles.glsl  vs_simple.glsl
